<?xml version="1.0"?>

<package format="3">

    <name>convex_plane_decomposition_msgs</name>
    <version>0.0.0</version>
    <description>Convex plane decomposition message definitions.</description>

    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>


    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>grid_map_msgs</depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <exec_depend>message_runtime</exec_depend>

</package>
